force-app/main/default/objects/Errors_on_Posts__c/Errors_on_Posts__c.object-meta.xml
<CustomObject>
    <label>Error on Post</label>
    <nameField>
        <displayFormat>Error-{00000}</displayFormat>
        <label>Errors on Posts Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Errors on Posts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>