force-app/main/default/objects/Errors_on_Posts__c/fields/Date_Error_Found__c.field-meta.xml
<CustomField>
    <fullName>Date_Error_Found__c</fullName>
    <label>Date Error Found</label>
    <type>Date</type>
</CustomField>