force-app/main/default/objects/Errors_on_Posts__c/fields/Deal__c.field-meta.xml
<CustomField>
    <fullName>Deal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Deal</label>
    <referenceTo>Deal__c</referenceTo>
    <relationshipLabel>Errors on Posts</relationshipLabel>
    <relationshipName>Errors_on_Posts</relationshipName>
    <type>Lookup</type>
</CustomField>