force-app/main/default/objects/Errors_on_Posts__c/fields/Number_Negative_Comments__c.field-meta.xml
<CustomField>
    <fullName>Number_Negative_Comments__c</fullName>
    <label>Number Negative Comments</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>