force-app/main/default/objects/Errors_on_Posts__c/fields/Reported_To__c.field-meta.xml
<CustomField>
    <fullName>Reported_To__c</fullName>
    <label>Reported To</label>
    <length>255</length>
    <type>Text</type>
</CustomField>